--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </ul>
 <p>
-<img src="C:\Users\safii\Downloads\safi first html\ff.png" alt="bg image" width="1200" height="600">
+<img src="images\ff.png" alt="bg image" width="1200" height="600">
 </p>
 <br><br>
 
@@ -41,7 +41,7 @@
 Choose a VPN from the Google Play Store and download it. In case you don't want to pay for the VPN service, be sure the VPN you select offers unlimited data. </li>
 </ul>
 <br>
-<img src="C:\Users\safii\Downloads\safi first html\tr.png" alt="bg image" width="1200" height="600" >
+<img src="images\tr.png" alt="bg image" width="1200" height="600" >
 <ul>
 <b>	<li> Launch the VPN client. The server's optimal location will be selected by the app on its own. You can, however, alter the server's location as necessary.
 	</li>
@@ -49,7 +49,7 @@ Choose a VPN from the Google Play Store and download it. In case you don't want 
 	</li>
 	<li>You’ll be connected to another server abroad in just a moment, and the VPN service will start.</li> </b>
 	</ul>
-<img src="C:\Users\safii\Downloads\safi first html\tr2.png" alt="bg image" width="1200" height="600">
+<img src="images\tr2.png" alt="bg image" width="1200" height="600">
 <br>
 <b>Now that the Garena Free Fire app is open, you can use your login information to access it. You can now enjoy the game without worrying about your ISP.</b> <br>
 
@@ -59,7 +59,7 @@ Choose a VPN from the Google Play Store and download it. In case you don't want 
 
 You can download the game on iOS and Android if you want to.</li> <b> <br>
 
-<img src="C:\Users\safii\Downloads\safi first html\ff2.png"alt="bg image" width="1200" height="600">
+<img src="images\ff2.png"alt="bg image" width="1200" height="600">
 <br>
 <h1> CONCLUSION:</H1>
 <li> As you can see, despite the prohibition in India, Garena Free Fire is still accessible and playable. Also, a newer, more feature-rich version of the game is available for play. These functions, however, will only function on phones with more advanced technology. You will have to make a tiny concession, but you can play this awesome battle royale game in either case. What are you still holding out for? Follow the strategies we've outlined above, and tell your friends who wish to play Garena Free Fire about this page.</li> <b>
